# skipjack-mcp

./: .gitignore  .releaserc.json  .releaserc.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build.rs  commit-msg.sh  config.toml  install.sh  mcp.json.example  pre-commit.sh  ua_pool.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  semantic-release.yml
init/: pre-commit
init/macos/: com.skipjackd.daemon.plist
scripts/: version.sh
src/: cli.rs  config.rs  lib.rs  main.rs  mcp.rs
src/anti_blocking/: agents.rs  ip_rotation.rs  mod.rs  rate_limiter.rs  retry.rs  rotating_client.rs  tls.rs
src/cache/: mod.rs  sqlite.rs
src/daemon/: manager.rs  mod.rs  protocol.rs  server.rs
src/search/: merge.rs  mod.rs  provider.rs  rank.rs  request.rs
src/search/providers/: brave.rs  duckduckgo.rs  jina.rs  mod.rs  searxng.rs
tests/fixtures/brave/: search.json
tests/fixtures/duckduckgo/: search.html
tests/fixtures/jina/: search.json
tests/fixtures/searxng/: search.json
