[package]
name = "skipjackd"
version = "0.4.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/sdkks/skipjack-mcp"
description = "Multi-provider web search daemon with anti-blocking, caching, and MCP integration"

[[bin]]
name = "skipjackd"
path = "src/main.rs"

[features]
default = []
binary-release = []

[dependencies]
rmcp = { version = "1.6", default-features = false, features = ["server", "transport-io", "transport-async-rw", "macros", "schemars"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "cookies", "socks", "json"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-native-certs = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
socket2 = "0.5"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
toml = "0.8"
dirs = "6"
async-trait = "0.1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
schemars = "1.0"
scraper = "0.21"
url = "2"
rand = "0.8"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
html-to-markdown-rs = "3"
libc = "0.2"
ipnet = "2"

[dev-dependencies]
tempfile = "3"
